--- a/rebar.config
+++ b/rebar.config
@@ -2,5 +2,5 @@
 
 {deps, [
     {echo_async, ".*",
-        {git, "https://github.com/EchoTeam/echo_async.git", {tag, "v1.0.0"}}}
+        {git, "git@github.com:EchoTeam/echo_async.git", {tag, "v1.0.0"}}}
 ]}.
