depend on echo_async 1.0.*, branch master

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 %%% vim: set ts=4 sts=4 sw=4 et:
 
 {deps, [
-    {echo_async, ".*",
-        {git, "git@github.com:EchoTeam/echo_async.git", {tag, "v1.0.0"}}}
+    {echo_async, "1.0.*",
+        {git, "git@github.com:EchoTeam/echo_async.git", {branch, master}}}
 ]}.
