set branch name to a string

--- a/rebar.config
+++ b/rebar.config
@@ -2,5 +2,5 @@
 
 {deps, [
     {echo_async, "1.0.*",
-        {git, "git@github.com:EchoTeam/echo_async.git", {branch, master}}}
+        {git, "git@github.com:EchoTeam/echo_async.git", {branch, "master"}}}
 ]}.
